--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header"></header>
-      <main class="main"></main>
+      <canvas id="game" width="1888" height="960"></canvas>
       <footer class="footer"></footer>
     </div>
 
