--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <div class="wrapper">
       <canvas id="game" width="1888" height="960"></canvas>
-      <footer class="footer"></footer>
+      <footer>
+        <div>Dzlek 2024 &copy;</div>
+        <a href="https://github.com/dzlek">Git</a>
+        <img src="./public/assets/svg/rss-logo.svg" alt="Logo" />
+        <a href="https://rs.school/courses/javascript-preschool-ru">Link</a>
+      </footer>
     </div>
 
     <script src="./src/index.js"></script>
