refactor: fix4 image path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <footer>
         <div>Dzlek 2024 &copy;</div>
         <a href="https://github.com/dzlek">Git</a>
-        <img src="./public/assets/svg/rss-logo.svg" alt="Logo" />
+        <img src="rss-logo.svg" alt="Logo" />
         <a href="https://rs.school/courses/javascript-preschool-ru">Link</a>
       </footer>
     </div>
